--- a/Требования.md
+++ b/Требования.md
@@ -20,7 +20,7 @@
 
 - Папка `Конспекты/` — конспекты и теоретические материалы `тема_номер`
 - Папка `Домашние задания/` — каждая домашняя работа в отдельной папкае `ДЗ_дата`  
-- Папка `Лабораторные работы и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
+- Папка `Лабораторные и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
 - Папка `Проекты/` — проектные работы с папками `docs/`, `src/`, `tests/ или другими в зависимости от требований`  
 - Папка `Контрольные работы/` — контрольные работы в папке КОНТРОЛЬ_номер 
 
@@ -28,7 +28,7 @@
 
 - Папка `Конспекты/` — конспекты и теоретические материалы `тема_номер`
 - Папка `Домашние задания/` — каждая домашняя работа в отдельной папке `ДЗ_дата`  
-- Папка `Лабораторные работы и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
+- Папка `Лабораторные и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
 - Папка `Проекты/` — проектные работы с папками `docs/`, `src/`, `tests/ или другими в зависимости от требований`  
 - Папка `Контрольные работы/` — контрольные работы в папке КОНТРОЛЬ_номер  
 
@@ -42,7 +42,7 @@
 
 - Папка `Конспекты/` — конспекты и теоретические материалы `тема_номер`
 - Папка `Домашние задания/` — каждая домашняя работа в отдельной папке `ДЗ_дата`  
-- Папка `Лабораторные работы и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
+- Папка `Лабораторные и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
 - Папка `Проекты/` — проектные работы с папками `docs/`, `src/`, `tests/ или другими в зависимости от требований`  
 - Папка `Контрольные работы/` — контрольные работы в папке КОНТРОЛЬ_номер
 
@@ -50,7 +50,7 @@
 
 - Папка `Конспекты/` — конспекты и теоретические материалы `тема_номер`
 - Папка `Домашние задания/` — каждая домашняя работа в отдельной папке `ДЗ_дата`  
-- Папка `Лабораторные работы и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
+- Папка `Лабораторные и Практические работы/` — лабораторные и практические работы в отдельных папках `ЛАБ_номер` или `ПР_номер`  
 - Папка `Проекты/` — проектные работы с папками `docs/`, `src/`, `tests/ или другими в зависимости от требований`  
 - Папка `Контрольные работы/` — контрольные работы в папке КОНТРОЛЬ_номер
 
